--- a/charts/eloq-operator/values.yaml
+++ b/charts/eloq-operator/values.yaml
@@ -16,7 +16,7 @@ controllerManager:
     name: "eloq-operator-controller-manager-sa"
     annotations: {}
   image:
-    repository: monographdb/eloq-operator
+    repository: eloqdata/eloq-operator
     tag: latest
   imagePullPolicy: IfNotPresent
   ## In case the above image is pulled from a registry that requires
