--- a/charts/eloq-operator/values.yaml
+++ b/charts/eloq-operator/values.yaml
@@ -17,7 +17,7 @@ controllerManager:
     annotations: {}
   image:
     repository: eloqdata/eloq-operator
-    tag: latest
+    tag: 4.0.5
   imagePullPolicy: IfNotPresent
   ## In case the above image is pulled from a registry that requires
   ## authentication, a secret containining credentials can be added
