--- a/charts/eloq-operator/templates/crds/eloqdbcluster.eloqdata.com_eloqdbclusters.yaml
+++ b/charts/eloq-operator/templates/crds/eloqdbcluster.eloqdata.com_eloqdbclusters.yaml
@@ -802,6 +802,11 @@ spec:
                             description: Cloud provider object storage type, s3 (aws
                               s3) or gcs (google cloud storage)
                             type: string
+                          endpointUrl:
+                            default: ""
+                            description: EndpointUrl Custom S3-compatible endpoint
+                              URL (e.g., for MinIO or other S3-compatible storage)
+                            type: string
                           objectStoreBucketName:
                             description: ObjectStoreBucketName
                             type: string
@@ -1018,6 +1023,11 @@ spec:
                             default: s3
                             description: Cloud provider object storage type, s3 (aws
                               s3) or gcs (google cloud storage)
+                            type: string
+                          endpointUrl:
+                            default: ""
+                            description: EndpointUrl Custom S3-compatible endpoint
+                              URL (e.g., for MinIO or other S3-compatible storage)
                             type: string
                           objectStoreBucketName:
                             description: ObjectStoreBucketName
