--- a/charts/eloq-operator/values.yaml
+++ b/charts/eloq-operator/values.yaml
@@ -6,6 +6,7 @@ appendReleaseSuffix: false
 # cloudProvider: "aws"
 # k8sClusterName: "eloqdb-dev"
 # awsRegion: "ap-northeast-1"
+k8sDistribution: "eks"  # Options: eks, gke, cce, defaultK8s
 timezone: UTC
 
 ## controller manager
@@ -19,6 +20,17 @@ controllerManager:
     repository: eloqdata/eloq-operator
     tag: 4.0.9
   imagePullPolicy: IfNotPresent
+  kubeRbacProxy:
+    image:
+      repository: quay.io/brancz/kube-rbac-proxy
+      tag: v0.13.1
+    resources:
+      limits:
+        cpu: 500m
+        memory: 512Mi
+      requests:
+        cpu: 500m
+        memory: 512Mi
   ## In case the above image is pulled from a registry that requires
   ## authentication, a secret containing credentials can be added
   ## imagePullSecrets:
@@ -50,7 +62,7 @@ controllerManager:
   env: []
 
 ## Setting keepCrds to false will delete CRDs after helm uninstall the release
-keepCrds: true
+keepCrds: false
 
 cert-manager:
   # -- Install cert-manger. Set to false to use an existing cert-manager
