--- a/charts/eloq-operator/templates/crds/eloqdbcluster.eloqdata.com_eloqdbclusters.yaml
+++ b/charts/eloq-operator/templates/crds/eloqdbcluster.eloqdata.com_eloqdbclusters.yaml
@@ -60,6 +60,11 @@ spec:
           spec:
             description: EloqClusterSpec defines the desired state of a EloqDBCluster
             properties:
+              awsSecretName:
+                description: |-
+                  AwsSecretName specifies the name of the Kubernetes secret containing AWS credentials (AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY)
+                  to be injected as environment variables into the pods for accessing AWS services like S3.
+                type: string
               clusterDeployMode:
                 default: txWithLog
                 description: Which services to deploy
@@ -101,7 +106,7 @@ spec:
                           rawConfig: |
                             [mariadb]
                             max_connections=2000
-                          for eloqdoc, the MongoDB configuration format is like (YAML format):
+                          for eloqdoc, the MongoDB configuration format is like:
                           rawConfig: |
                             systemLog:
                               verbosity: 0
@@ -373,32 +378,6 @@ spec:
                       pvc:
                         description: PersistentVolumeClaim Persistent volume to use
                         properties:
-                          efs:
-                            description: (Optional) EFS volume
-                            properties:
-                              managed:
-                                default: true
-                                description: |-
-                                  (Optional) ManagedEFS indicates whether the system should create and manage its own EFS.
-                                  If true, the FileSystemId and AccessPoint fields in Source will be ignored.
-                                type: boolean
-                              source:
-                                description: (Optional) Source,Use the existing EFS
-                                  system.
-                                properties:
-                                  accessPoint:
-                                    description: AccessPoint, the access point of
-                                      the file system.
-                                    type: string
-                                  fileSystemId:
-                                    description: FileSystemId, the ID of the file
-                                      system.
-                                    type: string
-                                required:
-                                - accessPoint
-                                - fileSystemId
-                                type: object
-                            type: object
                           source:
                             description: (Optional) Existing PVC in the same namespace
                             properties:
@@ -951,7 +930,11 @@ spec:
                   storageClassDiskType:
                     default: gp3
                     description: |-
-                      Cloud provisioned network storage disk type
+                      Cloud provisioned network storage disk type. Must match the cloud provider being used.
+                      Baidu Cloud (CCE) supported types: hp1, ssd, cloud_hp1, premium_ssd, enhanced_ssd_pl1, enhanced_ssd_pl2
+                        Reference: https://cloud.baidu.com/doc/BCC/s/6jwvyo0q2#storagetype
+                      AWS (EKS) supported types: gp2, gp3, io1, io2, st1, sc1
+                      GCP (GKE) supported types: pd-ssd, pd-extreme, pd-standard
                       Default: gp3
                     type: string
                   tolerations:
@@ -1361,32 +1344,6 @@ spec:
                       pvc:
                         description: PersistentVolumeClaim Persistent volume to use
                         properties:
-                          efs:
-                            description: (Optional) EFS volume
-                            properties:
-                              managed:
-                                default: true
-                                description: |-
-                                  (Optional) ManagedEFS indicates whether the system should create and manage its own EFS.
-                                  If true, the FileSystemId and AccessPoint fields in Source will be ignored.
-                                type: boolean
-                              source:
-                                description: (Optional) Source,Use the existing EFS
-                                  system.
-                                properties:
-                                  accessPoint:
-                                    description: AccessPoint, the access point of
-                                      the file system.
-                                    type: string
-                                  fileSystemId:
-                                    description: FileSystemId, the ID of the file
-                                      system.
-                                    type: string
-                                required:
-                                - accessPoint
-                                - fileSystemId
-                                type: object
-                            type: object
                           source:
                             description: (Optional) Existing PVC in the same namespace
                             properties:
@@ -1863,7 +1820,11 @@ spec:
                   storageClassDiskType:
                     default: gp3
                     description: |-
-                      Cloud provisioned network storage disk type
+                      Cloud provisioned network storage disk type. Must match the cloud provider being used.
+                      Baidu Cloud (CCE) supported types: hp1, ssd, cloud_hp1, premium_ssd, enhanced_ssd_pl1, enhanced_ssd_pl2
+                        Reference: https://cloud.baidu.com/doc/BCC/s/6jwvyo0q2#storagetype
+                      AWS (EKS) supported types: gp2, gp3, io1, io2, st1, sc1
+                      GCP (GKE) supported types: pd-ssd, pd-extreme, pd-standard
                       Default: gp3
                     type: string
                   tolerations:
