uncomment nodeSelector in controllerManager configuration

--- a/charts/eloq-operator/values.yaml
+++ b/charts/eloq-operator/values.yaml
@@ -10,8 +10,8 @@ timezone: UTC
 
 ## controller manager
 controllerManager:
-  # nodeSelector:
-  #   eloqdata.com/node: control-plane
+  nodeSelector:
+    eloqdata.com/node: control-plane
   serviceAccount:
     name: "eloq-operator-controller-manager-sa"
     annotations: {}
